--- a/index.html
+++ b/index.html
@@ -89,5 +89,7 @@
         <h3>desenvolvido por Beatriz.codes</h3>
         <p>Alura Latam- 2024</p>
     </footer>
+    <script src="./js/conectaApi.js"></script>
+    <script src="./js/mostrarProdutos.js"></script>
 </body>
 </html>
